[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Check_unit.gd" type="Script" id=2]
[ext_resource path="res://Sprites/fon.png" type="Texture" id=3]
[ext_resource path="res://Buttons/Button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="Check_unit" type="Node2D"]
script = ExtResource( 2 )

[node name="fon" type="Sprite" parent="."]
scale = Vector2( 10.022, 18.043 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -80.0
margin_top = -139.0
margin_right = 80.0
margin_bottom = -114.0
custom_fonts/font = SubResource( 1 )
text = "Тип дивизии:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -80.1761
margin_top = -114.0
margin_right = 79.8239
margin_bottom = -89.0
custom_fonts/font = SubResource( 2 )
text = "Количество:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pod2" type="Button" parent="."]
margin_left = -80.0
margin_top = 113.765
margin_right = 80.0
margin_bottom = 144.765
custom_fonts/font = SubResource( 3 )
text = "Оружие для поддержки"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pod" type="Button" parent="."]
margin_left = -80.1761
margin_top = 82.9877
margin_right = 79.8239
margin_bottom = 113.988
custom_fonts/font = SubResource( 4 )
text = "Оружие для поддержки"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon" type="Button" parent="."]
margin_left = -80.0
margin_top = 51.0
margin_right = 80.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 5 )
text = "Основное оружие"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo2" type="Button" parent="."]
margin_left = -80.1761
margin_top = 20.0
margin_right = 79.8239
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
text = "Боеприпасы"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo1" type="Button" parent="."]
margin_left = -80.0
margin_top = -11.0
margin_right = 80.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Боеприпасы"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attak" type="Label" parent="."]
margin_left = -80.0
margin_top = -89.0
margin_right = 80.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 8 )
text = "Урон:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="."]
margin_left = -80.0
margin_top = -64.0
margin_right = 80.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 9 )
text = "Живучесть:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 88.1995
margin_top = -139.0
margin_right = 248.199
margin_bottom = -108.0
custom_fonts/font = SubResource( 10 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="pod2" to="." method="_on_pod2_pressed"]
[connection signal="pressed" from="pod" to="." method="_on_pod_pressed"]
[connection signal="pressed" from="weapon" to="." method="_on_weapon_pressed"]
[connection signal="pressed" from="ammo2" to="." method="_on_ammo2_pressed"]
[connection signal="pressed" from="ammo1" to="." method="_on_ammo1_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
